objects/Sales_Budget__c/Sales_Budget__c.object-meta.xml
<CustomObject>
    <label>Sales Budget</label>
    <nameField>
        <displayFormat>B-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>