objects/Sales_Budget__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Executive</label>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipLabel>Sales Budgets</relationshipLabel>
    <relationshipName>Sales_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>