objects/Sales_Budget__c/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <formula>Customer__r.Account_Executive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE</label>
    <type>Text</type>
</CustomField>