objects/Sales_Budget__c/fields/CS_ID__c.field-meta.xml
<CustomField>
    <fullName>CS_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS ID</label>
    <type>Text</type>
</CustomField>