objects/Sales_Budget__c/fields/PC__c.field-meta.xml
<CustomField>
    <fullName>PC__c</fullName>
    <formula>Customer__r.Salesperson__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PC</label>
    <type>Text</type>
</CustomField>