objects/Sales_Budget__c/fields/Period_No__c.field-meta.xml
<CustomField>
    <fullName>Period_No__c</fullName>
    <label>Fiscal Period</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>