objects/Sales_Budget__c/fields/Sales_Budget_vs_Customer_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Sales_Budget_vs_Customer_Revenue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Budget vs Customer Revenue</label>
    <referenceTo>Sales_Budget_vs_Customer_Revenue__c</referenceTo>
    <relationshipLabel>Sales Budgets</relationshipLabel>
    <relationshipName>Sales_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>