objects/Sales_Budget__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson</label>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipLabel>Sales Budgets (Salesperson)</relationshipLabel>
    <relationshipName>Sales_Budgets1</relationshipName>
    <type>Lookup</type>
</CustomField>